--- a/sementic_server/data/yml/node_code.yml
+++ b/sementic_server/data/yml/node_code.yml
@@ -2,4 +2,4 @@
   ALIPAY_VALUE: 270, TAOBAO_VALUE: 280, MICROBLOG_VALUE: 290, ADDR_VALUE: 310, VEH_FRAM_NO: 410, VEHCARD_VALUE: 420,
   MAC_VALUE: 431, IMEI_VALUE: 432, ICCID: 441, IMSI_VALUE: 442, SocialSecurityCard: 451, BankCard: 452,
   IDCARD_VALUE: 461, PHONE_NUM: 470, QQ_GROUP_NUM: 511, WX_GROUP_NUM: 512,
-  CPNY_NAME: 521, Office: 524, DATE: 000, UNLABEL: 001}
+  CPNY_NAME: 521, Office: 524, DATE: 000, UNLABEL: 001,FIRSTNAME: 100,LASTNAME: 100,CHENWEI: 100}
