--- a/sementic_server/data/ontology/v_property_list.yml
+++ b/sementic_server/data/ontology/v_property_list.yml
@@ -1,854 +1,1025 @@
-- inner_id: 0
+0:
+  inner_id: 0
   值域: string
   定义域: Person
   属性名称: UUID
   属性描述: UUID
-- inner_id: 1
+1:
+  inner_id: 1
   值域: string
   定义域: Person
   属性名称: NAME
   属性描述: 姓名
-- inner_id: 2
+2:
+  inner_id: 2
   值域: string
   定义域: Person
   属性名称: OLD_NAME
   属性描述: 曾用名
-- inner_id: 3
+3:
+  inner_id: 3
   值域: string
   定义域: Person
   属性名称: ALIAS
   属性描述: 别名
-- inner_id: 4
+4:
+  inner_id: 4
   值域: string
   定义域: Person
   属性名称: EN_GIV_NAME
   属性描述: 英文名
-- inner_id: 5
+5:
+  inner_id: 5
   值域: string
   定义域: Person
   属性名称: BIRTHDAY
   属性描述: 生日
-- inner_id: 6
+6:
+  inner_id: 6
   值域: string
   定义域: Person
   属性名称: SEX
   属性描述: 性别
-- inner_id: 7
+7:
+  inner_id: 7
   值域: string
   定义域: Person
   属性名称: ORG_PLACE
   属性描述: 籍贯
-- inner_id: 8
+8:
+  inner_id: 8
   值域: string
   定义域: Person
   属性名称: BIRTH_PLACE
   属性描述: 出生地
-- inner_id: 9
+9:
+  inner_id: 9
   值域: string
   定义域: Person
   属性名称: HJD_ADDR
   属性描述: 户籍地
-- inner_id: 10
+10:
+  inner_id: 10
   值域: string
   定义域: Person
   属性名称: NATION
   属性描述: 民族
-- inner_id: 11
+11:
+  inner_id: 11
   值域: string
   定义域: Person
   属性名称: NATIONNALITY
   属性描述: 国籍
-- inner_id: 12
+12:
+  inner_id: 12
   值域: string
   定义域: Person
   属性名称: CERT_PHOTO
   属性描述: 证件头像
-- inner_id: 13
+13:
+  inner_id: 13
   值域: string
   定义域: Person
   属性名称: EDUCATION
   属性描述: 文化程度
-- inner_id: 14
+14:
+  inner_id: 14
   值域: string
   定义域: Person
   属性名称: MARR
   属性描述: 婚姻状况
-- inner_id: 15
+15:
+  inner_id: 15
   值域: string
   定义域: Person
   属性名称: POL_AFF
   属性描述: 政治面貌
-- inner_id: 16
+16:
+  inner_id: 16
   值域: string
   定义域: Person
   属性名称: RELIGION
   属性描述: 宗教状况
-- inner_id: 17
+17:
+  inner_id: 17
   值域: string
   定义域: Person
   属性名称: PROF
   属性描述: 职业
-- inner_id: 18
+18:
+  inner_id: 18
   值域: string
   定义域: Person
   属性名称: MILIT_COND
   属性描述: 服役状况
-- inner_id: 19
+19:
+  inner_id: 19
   值域: string
   定义域: Person
   属性名称: PER_TAG
   属性描述: 标签
-- inner_id: 20
+20:
+  inner_id: 20
   值域: string
   定义域: QQ
   属性名称: QQ_NUM
   属性描述: QQ号码
-- inner_id: 21
+21:
+  inner_id: 21
   值域: string
   定义域: QQ
   属性名称: USER_MARK
   属性描述: 备注名
-- inner_id: 22
+22:
+  inner_id: 22
   值域: string
   定义域: QQ
   属性名称: NICKNAME
   属性描述: QQ昵称
-- inner_id: 23
+23:
+  inner_id: 23
   值域: string
   定义域: QQ
   属性名称: FST_DATE_FS
   属性描述: 首次发现时间
-- inner_id: 24
+24:
+  inner_id: 24
   值域: string
   定义域: QQ
   属性名称: LST_DATE_FS
   属性描述: 最后发现时间
-- inner_id: 25
+25:
+  inner_id: 25
   值域: int
   定义域: MobileNumber
   属性名称: MOB_NUM
   属性描述: 手机号
-- inner_id: 26
+26:
+  inner_id: 26
   值域: string
   定义域: MobileNumber
   属性名称: MOB_REM_NAME
   属性描述: 备注名
-- inner_id: 27
+27:
+  inner_id: 27
   值域: string
   定义域: MobileNumber
   属性名称: MOB_OPT
   属性描述: 运营商
-- inner_id: 28
+28:
+  inner_id: 28
   值域: string
   定义域: MobileNumber
   属性名称: MOB_ATTR
   属性描述: 归属地
-- inner_id: 29
+29:
+  inner_id: 29
   值域: string
   定义域: MobileNumber
   属性名称: MOB_CARD_TYPE
   属性描述: 卡类型
-- inner_id: 30
+30:
+  inner_id: 30
   值域: string
   定义域: MobileNumber
   属性名称: MOB_REG_DATE_FS
   属性描述: 开户时间
-- inner_id: 31
+31:
+  inner_id: 31
   值域: string
   定义域: MobileNumber
   属性名称: INSTALL_ADDR
   属性描述: 装机地址
-- inner_id: 32
+32:
+  inner_id: 32
   值域: string
   定义域: MobileNumber
   属性名称: FST_DATE_FS
   属性描述: 首次发现时间
-- inner_id: 33
+33:
+  inner_id: 33
   值域: string
   定义域: MobileNumber
   属性名称: LST_DATE_FS
   属性描述: 最后发现时间
-- inner_id: 34
+34:
+  inner_id: 34
   值域: string
   定义域: WeChat
   属性名称: WECHAT_VALUE
   属性描述: 微信账号
-- inner_id: 35
+35:
+  inner_id: 35
   值域: string
   定义域: WeChat
   属性名称: WECHAT_UIN
   属性描述: 微信内部ID
-- inner_id: 36
+36:
+  inner_id: 36
   值域: string
   定义域: WeChat
   属性名称: USER_MARK
   属性描述: 备注名
-- inner_id: 37
+37:
+  inner_id: 37
   值域: string
   定义域: WeChat
   属性名称: NICKNAME
   属性描述: 微信昵称
-- inner_id: 38
+38:
+  inner_id: 38
   值域: string
   定义域: WeChat
   属性名称: FST_DATE_FS
   属性描述: 首次发现时间
-- inner_id: 39
+39:
+  inner_id: 39
   值域: string
   定义域: WeChat
   属性名称: LST_DATE_FS
   属性描述: 最后发现时间
-- inner_id: 40
+40:
+  inner_id: 40
   值域: string
   定义域: Email
   属性名称: EMAIL_VALUE
   属性描述: 邮箱账号
-- inner_id: 41
+41:
+  inner_id: 41
   值域: string
   定义域: Email
   属性名称: DOMAIN
   属性描述: 域名
-- inner_id: 42
+42:
+  inner_id: 42
   值域: string
   定义域: Email
   属性名称: USER_MARK
   属性描述: 备注名
-- inner_id: 43
+43:
+  inner_id: 43
   值域: string
   定义域: Email
   属性名称: FST_DATE_FS
   属性描述: 首次发现时间
-- inner_id: 44
+44:
+  inner_id: 44
   值域: string
   定义域: Email
   属性名称: LST_DATE_FS
   属性描述: 最后发现时间
-- inner_id: 45
+45:
+  inner_id: 45
   值域: string
   定义域: MicroBlog
   属性名称: UID
   属性描述: 微博内部ID
-- inner_id: 46
+46:
+  inner_id: 46
   值域: string
   定义域: MicroBlog
   属性名称: MICROBLOG_VALUE
   属性描述: 新浪微博账号
-- inner_id: 47
+47:
+  inner_id: 47
   值域: string
   定义域: MicroBlog
   属性名称: USER_MARK
   属性描述: 备注名
-- inner_id: 48
+48:
+  inner_id: 48
   值域: string
   定义域: MicroBlog
   属性名称: NICKNAME
   属性描述: 昵称
-- inner_id: 49
+49:
+  inner_id: 49
   值域: string
   定义域: MicroBlog
   属性名称: FST_DATE_FS
   属性描述: 首次发现时间
-- inner_id: 50
+50:
+  inner_id: 50
   值域: string
   定义域: MicroBlog
   属性名称: LST_DATE_FS
   属性描述: 最后发现时间
-- inner_id: 51
+51:
+  inner_id: 51
   值域: string
   定义域: DouYin
   属性名称: DOUYIN_Value
   属性描述: 抖音账号
-- inner_id: 52
+52:
+  inner_id: 52
   值域: string
   定义域: DouYin
   属性名称: USER_MARK
   属性描述: 备注名
-- inner_id: 53
+53:
+  inner_id: 53
   值域: string
   定义域: DouYin
   属性名称: NICKNAME
   属性描述: 昵称
-- inner_id: 54
+54:
+  inner_id: 54
   值域: string
   定义域: DouYin
   属性名称: FST_DATE_FS
   属性描述: 首次发现时间
-- inner_id: 55
+55:
+  inner_id: 55
   值域: string
   定义域: DouYin
   属性名称: LST_DATE_FS
   属性描述: 最后发现时间
-- inner_id: 56
+56:
+  inner_id: 56
   值域: string
   定义域: JD
   属性名称: JD_VALUE
   属性描述: 京东账号
-- inner_id: 57
+57:
+  inner_id: 57
   值域: string
   定义域: JD
   属性名称: USER_MARK
   属性描述: 备注名
-- inner_id: 58
+58:
+  inner_id: 58
   值域: string
   定义域: JD
   属性名称: NICKNAME
   属性描述: 昵称
-- inner_id: 59
+59:
+  inner_id: 59
   值域: string
   定义域: JD
   属性名称: FST_DATE_FS
   属性描述: 首次发现时间
-- inner_id: 60
+60:
+  inner_id: 60
   值域: string
   定义域: JD
   属性名称: LST_DATE_FS
   属性描述: 最后发现时间
-- inner_id: 61
+61:
+  inner_id: 61
   值域: string
   定义域: Alipay
   属性名称: ALIPAY_VALUE
   属性描述: 支付宝账号
-- inner_id: 62
+62:
+  inner_id: 62
   值域: string
   定义域: Alipay
   属性名称: USER_MARK
   属性描述: 备注名
-- inner_id: 63
+63:
+  inner_id: 63
   值域: string
   定义域: Alipay
   属性名称: NICKNAME
   属性描述: 昵称
-- inner_id: 64
+64:
+  inner_id: 64
   值域: string
   定义域: Alipay
   属性名称: FST_DATE_FS
   属性描述: 首次发现时间
-- inner_id: 65
+65:
+  inner_id: 65
   值域: string
   定义域: Alipay
   属性名称: LST_DATE_FS
   属性描述: 最后发现时间
-- inner_id: 66
+66:
+  inner_id: 66
   值域: string
   定义域: TaoBao
   属性名称: TAOBAO_VALUE
   属性描述: 淘宝账号
-- inner_id: 67
+67:
+  inner_id: 67
   值域: string
   定义域: TaoBao
   属性名称: USER_MARK
   属性描述: 备注名
-- inner_id: 68
+68:
+  inner_id: 68
   值域: string
   定义域: TaoBao
   属性名称: NICKNAME
   属性描述: 昵称
-- inner_id: 69
+69:
+  inner_id: 69
   值域: string
   定义域: TaoBao
   属性名称: FST_DATE_FS
   属性描述: 首次发现时间
-- inner_id: 70
+70:
+  inner_id: 70
   值域: string
   定义域: TaoBao
   属性名称: LST_DATE_FS
   属性描述: 最后发现时间
-- inner_id: 71
+71:
+  inner_id: 71
   值域: string
   定义域: Addr
   属性名称: ADDR_ID
   属性描述: 地址id
-- inner_id: 72
+72:
+  inner_id: 72
   值域: string
   定义域: Addr
   属性名称: ADDR_TYPE
   属性描述: 地址类型
-- inner_id: 73
+73:
+  inner_id: 73
   值域: string
   定义域: Addr
   属性名称: ADDR_VALUE
   属性描述: 原始地址名称
-- inner_id: 74
+74:
+  inner_id: 74
   值域: Unknown
   定义域: Addr
   属性名称: PROVINCE
   属性描述: 省
-- inner_id: 75
+75:
+  inner_id: 75
   值域: Unknown
   定义域: Addr
   属性名称: CITY
   属性描述: 市
-- inner_id: 76
+76:
+  inner_id: 76
   值域: Unknown
   定义域: Addr
   属性名称: AREA
   属性描述: 区
-- inner_id: 77
+77:
+  inner_id: 77
   值域: float
   定义域: Addr
   属性名称: LON
   属性描述: 经度
-- inner_id: 78
+78:
+  inner_id: 78
   值域: float
   定义域: Addr
   属性名称: LAT
   属性描述: 纬度
-- inner_id: 79
+79:
+  inner_id: 79
   值域: string
   定义域: Addr
   属性名称: FST_DATE_FS
   属性描述: 首次发现时间
-- inner_id: 80
+80:
+  inner_id: 80
   值域: string
   定义域: Addr
   属性名称: LST_DATE_FS
   属性描述: 最后发现时间
-- inner_id: 81
+81:
+  inner_id: 81
   值域: string
   定义域: Vehicle
   属性名称: VEH_FRAM_NO
   属性描述: 车架号
-- inner_id: 82
+82:
+  inner_id: 82
   值域: string
   定义域: Vehicle
   属性名称: VEH_TYPE
   属性描述: 车辆类型
-- inner_id: 83
+83:
+  inner_id: 83
   值域: string
   定义域: Vehicle
   属性名称: VEH_COL
   属性描述: 车身颜色
-- inner_id: 84
+84:
+  inner_id: 84
   值域: string
   定义域: Vehicle
   属性名称: VEH_CH_BR
   属性描述: 车辆品牌
-- inner_id: 85
+85:
+  inner_id: 85
   值域: string
   定义域: Vehicle
   属性名称: VEH_ENG_NO
   属性描述: 车辆发动机号码
-- inner_id: 86
+86:
+  inner_id: 86
   值域: string
   定义域: Vehicle
   属性名称: VEH_ENG_MOD
   属性描述: 车辆发动机型号
-- inner_id: 87
+87:
+  inner_id: 87
   值域: string
   定义域: Vehicle
   属性名称: VEH_MOD
   属性描述: 车辆型号
-- inner_id: 88
+88:
+  inner_id: 88
   值域: string
   定义域: Vehicle
   属性名称: VEH_REG_DATE
   属性描述: 车辆登记日期
-- inner_id: 89
+89:
+  inner_id: 89
   值域: string
   定义域: Vehicle
   属性名称: FST_DATE_FS
   属性描述: 首次发现时间
-- inner_id: 90
+90:
+  inner_id: 90
   值域: string
   定义域: Vehicle
   属性名称: LST_DATE_FS
   属性描述: 最后发现时间
-- inner_id: 91
+91:
+  inner_id: 91
   值域: string
   定义域: VehicleCard
   属性名称: VEHCARD_VALUE
   属性描述: 车牌号
-- inner_id: 92
+92:
+  inner_id: 92
   值域: string
   定义域: VehicleCard
   属性名称: VEH_COL
   属性描述: 车牌颜色
-- inner_id: 93
+93:
+  inner_id: 93
   值域: string
   定义域: VehicleCard
   属性名称: DEAL_UNIT
   属性描述: 发牌单位
-- inner_id: 94
+94:
+  inner_id: 94
   值域: string
   定义域: VehicleCard
   属性名称: DEAL_AREA
   属性描述: 发牌地区
-- inner_id: 95
+95:
+  inner_id: 95
   值域: string
   定义域: VehicleCard
   属性名称: FST_DATE_FS
   属性描述: 首次发现时间
-- inner_id: 96
+96:
+  inner_id: 96
   值域: string
   定义域: VehicleCard
   属性名称: LST_DATE_FS
   属性描述: 最后发现时间
-- inner_id: 97
+97:
+  inner_id: 97
   值域: string
   定义域: MAC
   属性名称: MAC_VALUE
   属性描述: MAC
-- inner_id: 98
+98:
+  inner_id: 98
   值域: string
   定义域: MAC
   属性名称: DEV_TYPE
   属性描述: MAC所属设备类型
-- inner_id: 99
+99:
+  inner_id: 99
   值域: string
   定义域: MAC
   属性名称: DEV_MANUFA
   属性描述: 厂商
-- inner_id: 100
+100:
+  inner_id: 100
   值域: string
   定义域: MAC
   属性名称: FST_DATE_FS
   属性描述: 首次发现时间
-- inner_id: 101
+101:
+  inner_id: 101
   值域: string
   定义域: MAC
   属性名称: LST_DATE_FS
   属性描述: 最后发现时间
-- inner_id: 102
+102:
+  inner_id: 102
   值域: string
   定义域: IMEI
   属性名称: IMEI_VALUE
   属性描述: IMEI
-- inner_id: 103
+103:
+  inner_id: 103
   值域: string
   定义域: IMEI
   属性名称: DEV_MANUFA
   属性描述: 厂商
-- inner_id: 104
+104:
+  inner_id: 104
   值域: string
   定义域: IMEI
   属性名称: FST_DATE_FS
   属性描述: 首次发现时间
-- inner_id: 105
+105:
+  inner_id: 105
   值域: string
   定义域: IMEI
   属性名称: LST_DATE_FS
   属性描述: 最后发现时间
-- inner_id: 106
+106:
+  inner_id: 106
   值域: string
   定义域: IMSI
   属性名称: IMSI_VALUE
   属性描述: IMSI
-- inner_id: 107
+107:
+  inner_id: 107
   值域: string
   定义域: IMSI
   属性名称: MOB_OPT
   属性描述: 运营商
-- inner_id: 108
+108:
+  inner_id: 108
   值域: string
   定义域: IMSI
   属性名称: FST_DATE_FS
   属性描述: 首次发现时间
-- inner_id: 109
+109:
+  inner_id: 109
   值域: string
   定义域: IMSI
   属性名称: LST_DATE_FS
   属性描述: 最后发现时间
-- inner_id: 110
+110:
+  inner_id: 110
   值域: string
   定义域: Card
   属性名称: CARD_VALUE
   属性描述: 唯一标识
-- inner_id: 111
+111:
+  inner_id: 111
   值域: string
   定义域: Card
   属性名称: CARD_TYPE
   属性描述: 卡类型
-- inner_id: 112
+112:
+  inner_id: 112
   值域: string
   定义域: Card
   属性名称: CARD_NO
   属性描述: 卡号码
-- inner_id: 113
+113:
+  inner_id: 113
   值域: string
   定义域: Card
   属性名称: CAR_OPEN_DATE_FS
   属性描述: 办理时间
-- inner_id: 114
+114:
+  inner_id: 114
   值域: string
   定义域: Card
   属性名称: FST_DATE_FS
   属性描述: 首次发现时间
-- inner_id: 115
+115:
+  inner_id: 115
   值域: string
   定义域: Card
   属性名称: LST_DATE_FS
   属性描述: 最后发现时间
-- inner_id: 116
+116:
+  inner_id: 116
   值域: int
   定义域: FixedPhoneNumber
   属性名称: PHONE_NUM
   属性描述: 固话号码
-- inner_id: 117
+117:
+  inner_id: 117
   值域: string
   定义域: FixedPhoneNumber
   属性名称: PHONE_REMARK
   属性描述: 备注名
-- inner_id: 118
+118:
+  inner_id: 118
   值域: string
   定义域: FixedPhoneNumber
   属性名称: PHONE_OPERAT
   属性描述: 运营商
-- inner_id: 119
+119:
+  inner_id: 119
   值域: string
   定义域: FixedPhoneNumber
   属性名称: INSTALL_DATE_FS
   属性描述: 装机时间
-- inner_id: 120
+120:
+  inner_id: 120
   值域: string
   定义域: FixedPhoneNumber
   属性名称: PHONE_ADDR
   属性描述: 装机地址
-- inner_id: 121
+121:
+  inner_id: 121
   值域: string
   定义域: FixedPhoneNumber
   属性名称: FST_DATE_FS
   属性描述: 首次发现时间
-- inner_id: 122
+122:
+  inner_id: 122
   值域: string
   定义域: FixedPhoneNumber
   属性名称: LST_DATE_FS
   属性描述: 最后发现时间
-- inner_id: 123
+123:
+  inner_id: 123
   值域: string
   定义域: Idcard
   属性名称: IDCARD_VALUE
   属性描述: 身份证件号码
-- inner_id: 124
+124:
+  inner_id: 124
   值域: string
   定义域: Idcard
   属性名称: TYPE
   属性描述: 类型
-- inner_id: 125
+125:
+  inner_id: 125
   值域: Unknown
   定义域: Idcard
   属性名称: PROVINCE
   属性描述: 省
-- inner_id: 126
+126:
+  inner_id: 126
   值域: Unknown
   定义域: Idcard
   属性名称: CITY
   属性描述: 市
-- inner_id: 127
+127:
+  inner_id: 127
   值域: Unknown
   定义域: Idcard
   属性名称: AREA
   属性描述: 区
-- inner_id: 128
+128:
+  inner_id: 128
   值域: string
   定义域: Idcard
   属性名称: NAME
   属性描述: 姓名
-- inner_id: 129
+129:
+  inner_id: 129
   值域: string
   定义域: Idcard
   属性名称: SEX
   属性描述: 性别
-- inner_id: 130
+130:
+  inner_id: 130
   值域: string
   定义域: Idcard
   属性名称: ORG_PLACE
   属性描述: 籍贯
-- inner_id: 131
+131:
+  inner_id: 131
   值域: string
   定义域: Idcard
   属性名称: CERT_PHOTO
   属性描述: 证件头像
-- inner_id: 132
+132:
+  inner_id: 132
   值域: string
   定义域: Idcard
   属性名称: FST_DATE_FS
   属性描述: 首次发现时间
-- inner_id: 133
+133:
+  inner_id: 133
   值域: string
   定义域: Idcard
   属性名称: LST_DATE_FS
   属性描述: 最后发现时间
-- inner_id: 134
+134:
+  inner_id: 134
   值域: string
   定义域: QQGroup
   属性名称: GROUP_NUM
   属性描述: QQ群号
-- inner_id: 135
+135:
+  inner_id: 135
   值域: string
   定义域: QQGroup
   属性名称: GROUP_NAME
   属性描述: QQ群名称
-- inner_id: 136
+136:
+  inner_id: 136
   值域: string
   定义域: QQGroup
   属性名称: GROUP_NOT
   属性描述: QQ群公告
-- inner_id: 137
+137:
+  inner_id: 137
   值域: string
   定义域: QQGroup
   属性名称: GROUP_TAG
   属性描述: QQ群标签
-- inner_id: 138
+138:
+  inner_id: 138
   值域: string
   定义域: QQGroup
   属性名称: GROUP_CREATE_DATE_FS
   属性描述: 创建时间
-- inner_id: 139
+139:
+  inner_id: 139
   值域: string
   定义域: QQGroup
   属性名称: FST_DATE_FS
   属性描述: 首次发现时间
-- inner_id: 140
+140:
+  inner_id: 140
   值域: string
   定义域: QQGroup
   属性名称: LST_DATE_FS
   属性描述: 最后发现时间
-- inner_id: 141
+141:
+  inner_id: 141
   值域: string
   定义域: WeChatGroup
   属性名称: GROUP_NUM
   属性描述: 微信群号
-- inner_id: 142
+142:
+  inner_id: 142
   值域: string
   定义域: WeChatGroup
   属性名称: GROUP_NAME
   属性描述: 微信群名称
-- inner_id: 143
+143:
+  inner_id: 143
   值域: string
   定义域: WeChatGroup
   属性名称: GROUP_CREATE_DATE_FS
   属性描述: 创建时间
-- inner_id: 144
+144:
+  inner_id: 144
   值域: string
   定义域: WeChatGroup
   属性名称: FST_DATE_FS
   属性描述: 首次发现时间
-- inner_id: 145
+145:
+  inner_id: 145
   值域: string
   定义域: WeChatGroup
   属性名称: LST_DATE_FS
   属性描述: 最后发现时间
-- inner_id: 146
+146:
+  inner_id: 146
   值域: string
   定义域: Company
   属性名称: COID
   属性描述: 唯一标识
-- inner_id: 147
+147:
+  inner_id: 147
   值域: string
   定义域: Company
   属性名称: BUSINESSREGNo
   属性描述: 工商注册号
-- inner_id: 148
+148:
+  inner_id: 148
   值域: string
   定义域: Company
   属性名称: CPNY_ADDR
   属性描述: 公司地址
-- inner_id: 149
+149:
+  inner_id: 149
   值域: string
   定义域: Company
   属性名称: CPNY_NAME
   属性描述: 公司名称
-- inner_id: 150
+150:
+  inner_id: 150
   值域: string
   定义域: Company
   属性名称: CPNY_OTHER_NAME
   属性描述: 其他名称
-- inner_id: 151
+151:
+  inner_id: 151
   值域: string
   定义域: Company
   属性名称: BUSS_RGE
   属性描述: 经营范围
-- inner_id: 152
+152:
+  inner_id: 152
   值域: string
   定义域: Company
   属性名称: INDUSTRY
   属性描述: 行业
-- inner_id: 153
+153:
+  inner_id: 153
   值域: string
   定义域: Company
   属性名称: COMPSTATUS
   属性描述: 企业状态
-- inner_id: 154
+154:
+  inner_id: 154
   值域: string
   定义域: Company
   属性名称: REG_DATE_FS
   属性描述: 注册时间
-- inner_id: 155
+155:
+  inner_id: 155
   值域: string
   定义域: Company
   属性名称: TEL
   属性描述: 电话
-- inner_id: 156
+156:
+  inner_id: 156
   值域: string
   定义域: Company
   属性名称: EMAIL
   属性描述: 邮箱
-- inner_id: 157
+157:
+  inner_id: 157
   值域: string
   定义域: Company
   属性名称: URL
   属性描述: 网站
-- inner_id: 158
+158:
+  inner_id: 158
   值域: string
   定义域: Company
   属性名称: lEGALPERSON
   属性描述: 法人
-- inner_id: 159
+159:
+  inner_id: 159
   值域: string
   定义域: Company
   属性名称: UNIFIEDCREDITCode
   属性描述: 统一信用代码
-- inner_id: 160
+160:
+  inner_id: 160
   值域: string
   定义域: Company
   属性名称: REGADDR
   属性描述: 注册地址
-- inner_id: 161
+161:
+  inner_id: 161
   值域: string
   定义域: Company
   属性名称: TAXPAYERID
   属性描述: 纳税人识别号
-- inner_id: 162
+162:
+  inner_id: 162
   值域: string
   定义域: Company
   属性名称: ORGCODE
   属性描述: 组织机构代码
-- inner_id: 163
+163:
+  inner_id: 163
   值域: string
   定义域: Company
   属性名称: COMPTYPE
   属性描述: 企业类型
-- inner_id: 164
+164:
+  inner_id: 164
   值域: string
   定义域: Company
   属性名称: REG_CAP
   属性描述: 注册资本金
-- inner_id: 165
+165:
+  inner_id: 165
   值域: string
   定义域: Company
   属性名称: OPERATINGPERIODSTART
   属性描述: 营业期限起始
-- inner_id: 166
+166:
+  inner_id: 166
   值域: string
   定义域: Company
   属性名称: OPERATINGPERIODSTOP
   属性描述: 营业期限终止
-- inner_id: 167
+167:
+  inner_id: 167
   值域: string
   定义域: Company
   属性名称: REGAUTHORITY
   属性描述: 登记机关
-- inner_id: 168
+168:
+  inner_id: 168
   值域: string
   定义域: Company
   属性名称: APPROVALDATE
   属性描述: 核准日期
-- inner_id: 169
+169:
+  inner_id: 169
   值域: string
   定义域: Company
   属性名称: FST_DATE_FS
   属性描述: 首次发现时间
-- inner_id: 170
+170:
+  inner_id: 170
   值域: string
   定义域: Company
   属性名称: LST_DATE_FS
