--- a/sementic_server/data/yml/wrong_table.yml
+++ b/sementic_server/data/yml/wrong_table.yml
@@ -54687,6 +54687,20 @@ qq好友: []
 - zonjingli
 - zonggjingli
 - zonjingli
+成员:
+- cheng员
+- ceng员
+- chengg员
+- ceg员
+- chen员
+- ce员
+- 成yuan
+- chengyuan
+- cengyuan
+- chenggyuan
+- cegyuan
+- chenyuan
+- ceyuan
 所在地:
 - suo在地
 - shuo在地
