--- a/sementic_server/config/model.config
+++ b/sementic_server/config/model.config
@@ -10,6 +10,7 @@
     "use_one_hot_embeddings": false,
     "sen_encoder_layer": -2,
     "model_ner_address": "localhost:8500",
+    "dependence_url": "http://120.132.109.87:10088/jfycfx",
     "grpc_request_timeout": 2.0,
     "dependence_parser_ip": "10.201.23.159",
     "dependence_parser_port": "9000",
