在广东省揭阳市惠来县定居的刘健坤的哥哥和表妹 依存图上的边根据实体类型定方向，并列关系的查询

--- a/sementic_server/data/yml/wrong_table.yml
+++ b/sementic_server/data/yml/wrong_table.yml
@@ -24514,6 +24514,14 @@ qq好友: []
 - 孩zhi
 - haizi
 - haizhi
+定居:
+- ding居
+- dingg居
+- din居
+- 定ju
+- dingju
+- dinggju
+- dinju
 室友:
 - shi友
 - si友
