--- a/sementic_server/data/yml/node_code.yml
+++ b/sementic_server/data/yml/node_code.yml
@@ -1,5 +1,5 @@
-{NAME: 100, QQ_NUM: 210, MOB_NUM: 220, WECHAT_VALUE: 230, EMAIL_VALUE: 240, DOUYIN_VALUE: 250, JD_VALUE: 260,
-  ALIPAY_VALUE: 270, TAOBAO_VALUE: 280, MICROBLOG_VALUE: 290, ADDR_VALUE: 310, VEH_FRAM_NO: 410, VEHCARD_VALUE: 420,
-  MAC_VALUE: 431, IMEI_VALUE: 432, ICCID: 441, IMSI_VALUE: 442, SocialSecurityCard: 451, BankCard: 452,
-  IDCARD_VALUE: 461, PHONE_NUM: 470, QQ_GROUP_NUM: 511, WX_GROUP_NUM: 512,
-  CPNY_NAME: 521, Office: 524, DATE: 000, UNLABEL: 001,FIRSTNAME: 100,LASTNAME: 100,CHENWEI: 100}
+{name: 100, qq_num: 210, mob_num: 220, wechat_value: 230, email_value: 240, douyin_value: 250, jd_value: 260,
+  alipay_value: 270, taobao_value: 280, microblog_value: 290, addr_value: 310, veh_fram_no: 410, vehcard_value: 420,
+  mac_value: 431, imei_value: 432, iccid: 441, imsi_value: 442, socialsecuritycard: 451, bankcard: 452,
+  idcard_value: 461, phone_num: 470, qq_group_num: 511, wx_group_num: 512,
+  cpny_name: 521, office: 524, date: 000, unlabel: 001,firstname: 100,lastname: 100,chenwei: 100}
