--- a/sementic_server/data/yml/relation_code.yml
+++ b/sementic_server/data/yml/relation_code.yml
@@ -1,86 +1,150 @@
-Appear: 1001
-AuthorizedBy: 3001
-BindMobileNum: 2904
-BindVehicle: 2901
-BindVehicleCard: 0
-Call: 2701
-ChasAddr: 1002
-ChasEmail: 1002
-ChasFixedPhone: 1002
-ChasMicroBlog: 1002
-ChasMobileNum: 1002
-ChasPlateNum: 1002
-ChasQQ: 1002
-ChasVehicle: 1002
-ChasWeChat: 1002
-Colleague: 2503
-CreateQQGroup: 2203
-CreateWeChatGroup: 2204
-CreatorOfQQGroup: 0
-CreatorOfWeChatGroup: 0
-DouYin_FansOf: 2303
-EmailLoginAlipay: 2409
-EmailLoginJD: 2408
-EmailLoginTaoBao: 2410
-Employ: 1002
-IMEIWithIMSI: 2902
-IMEIWithMAC: 2903
-Kindred: 2501
-LegalPerson: 1002
-Manager: 1002
-MemberOfQQGroup: 0
-MemberOfWeChatGroup: 0
-MicroBlog_FansOf: 2304
-MobileNumLoginAlipay: 2405
-MobileNumLoginDouYin: 2406
-MobileNumLoginJD: 2404
-MobileNumLoginMicroBlog: 2402
-MobileNumLoginQQ: 2401
-MobileNumLoginTaoBao: 2407
-MobileNumLoginWeChat: 2403
-Partner: 2802
-PhadIDCard_TW: 1001
-PhasAddr: 1001
-PhasAlipay: 1001
-PhasBankCard: 1001
-PhasDouYin: 1001
-PhasEmail: 1001
-PhasFixedPhone: 1001
-PhasIDCard_DL: 1001
-PhasIMEI: 1001
-PhasIMSI: 1001
-PhasJD: 1001
-PhasMAC: 1001
-PhasMicroBlog: 1001
-PhasMobileNum: 1001
-PhasPlateNum: 1001
-PhasQQ: 1001
-PhasSSC: 1001
-PhasTaoBao: 1001
-PhasVehicle: 1001
-PhasWeChat: 1001
-QQFriend: 2301
-QQJoinQQG: 2201
-QQJoinQQGroup: 0
-RegisterPlace: 1002
-Remark: 2101
-Reside: 1001
-SameCase: 2801
-SameInternetBar: 2603
-SamePrison: 2803
-SameRoom: 2601
-SameTown: 2504
-SameTrip: 2602
-SchoolMate: 2502
-SendMessageTo: 2702
-WeChatFriend: 2302
-WeChatJoinWeChatG: 2202
-WeChatJoinWeChatGroup: 0
-WorkAt: 1001
-WorkFor: 1001
-Work: 1001
-PhasOrgPlace: 0
-PhasBirthPlace: 0
-Friend: 0
-PhasVehicleCard: 0
-Ambiguous: 0
+AddrWithCo: '5213102'
+AddrWithP: '1003104'
+AlipayHolder: '1002701'
+AlipayLoginWithEmail: '2402701'
+AlipayLoginWithMobileNum: '2202701'
+Appear: '1003103'
+AuthorizeCo: '5215241'
+AuthorizedBy: '5215241'
+BankCardHolder: '1004521'
+BrotherOrSister: '1001003'
+Call: '2202202'
+CalledBy: '2202202'
+ChildToFatherSibling: '1001005'
+ChildToMotherSibling: '1001004'
+ChildToParent: '1001001'
+CoHasAddr: '5213102'
+CoHasEmail: '5212401'
+CoHasEmployee: '1005211'
+CoHasFixedPhone: 5212a01
+CoHasLegalPerson: '1005212'
+CoHasMicroBlog: '5212901'
+CoHasMobileNum: '5212201'
+CoHasPlate: '5214201'
+CoHasPresident: '1005213'
+CoHasQQ: '5212101'
+CoHasVehicle: '5214101'
+CoHasWeChat: '5212301'
+Colleague: 100100a
+CousinFromFatherSide: '1001006'
+CousinFromMotherSide: '1001007'
+CreateQQGroup: '2105111'
+CreateWeChatGroup: '2305121'
+DouYinFollow: '2502501'
+DouYinFollower: '2502501'
+DouYinHolder: '1002501'
+DouYinLoginWithMobileNum: '2202501'
+EmailHolder: '1002401'
+EmailOfAlipayLogin: '2402701'
+EmailOfJDLogin: '2402601'
+EmailOfTaoBaoLogin: '2402801'
+EmailWithCo: '5212401'
+FatherSiblingToChild: '1001005'
+FixedPhoneHolder: 1002a01
+FixedPhoneWithCo: 5212a01
+GetMessageFrom: '2202203'
+HusbandToWife: '1001002'
+IDCardDLHolder: '1004611'
+IDCardTWHolder: '1004621'
+IMEIHolder: '1004321'
+IMEIWithIMSI: '4324421'
+IMEIWithMAC: '4324311'
+IMSIBindMobileNum: '4422201'
+IMSIHolder: '1004421'
+IMSIWithIMEI: '4324421'
+JDHolder: '1002601'
+JDLoginWithEmail: '2402601'
+JDLoginWithMobileNum: '2202601'
+JoinQQGroup: '2105112'
+JoinWeChatGroup: '2305122'
+LegalPersonOfCo: '1005212'
+MACHolder: '1004311'
+MACWithIMEI: '4324311'
+ManagerOfQQGroup: '2105113'
+ManagerOfWeChatGroup: '2305123'
+MicroBlogFollow: '2902901'
+MicroBlogFollower: '2902901'
+MicroBlogHolder: '1002901'
+MicroBlogLoginWithMobileNum: '2202901'
+MicroBlogWithCo: '5212901'
+MobileNumHolder: '1002201'
+MobileNumOfAlipayLogin: '2202701'
+MobileNumOfDouYinLogin: '2202501'
+MobileNumOfJDLogin: '2202601'
+MobileNumOfMicroBlogLogin: '2202901'
+MobileNumOfQQLogin: '2202101'
+MobileNumOfTaoBaoLogin: '2202801'
+MobileNumOfWeChatLogin: '2202301'
+MobileNumWithCo: '5212201'
+MobileNumWithIMSI: '4422201'
+MotherSiblingToChild: '1001004'
+PAppeared: '1003103'
+PHasAddr: '1003104'
+PHasAlipay: '1002701'
+PHasBankCard: '1004521'
+PHasDouYin: '1002501'
+PHasEmail: '1002401'
+PHasFixedPhone: 1002a01
+PHasIDCardDL: '1004611'
+PHasIDCardTW: '1004621'
+PHasIMEI: '1004321'
+PHasIMSI: '1004421'
+PHasJD: '1002601'
+PHasMAC: '1004311'
+PHasMicroBlog: '1002901'
+PHasMobileNum: '1002201'
+PHasPlate: '1004201'
+PHasQQ: '1002101'
+PHasSSC: '1004511'
+PHasTaoBao: '1002801'
+PHasVehicle: '1004101'
+PHasWeChat: '1002301'
+ParentToChild: '1001001'
+Partner: 100100f
+PlateHolder: '1004201'
+PlateWithCo: '5214201'
+PlateWithVehicle: '4104201'
+PresidentOfCo: '1005213'
+QQFriend: '2102101'
+QQGroupCreator: '2105111'
+QQGroupManager: '2105113'
+QQGroupMember: '2105112'
+QQHolder: '1002101'
+QQLoginWithMobileNum: '2202101'
+QQWithCo: '5212101'
+QRemarkedByT: '2202102'
+RegisterPlace: '5213101'
+RegisterPlaceWithCo: '5213101'
+Relative: '1001008'
+Reside: '1003101'
+Resident: '1003101'
+SSCHolder: '1004511'
+SameCase: 100100e
+SameInternetBar: 100100h
+SamePrison: 100100g
+SameRoom: 100100c
+SameTown: 100100b
+SameTrip: 100100d
+Schoolmate: '1001009'
+SendMessageTo: '2202203'
+TRemarkQ: '2202102'
+TRemarkT: '2202201'
+TRemarkedByT: '2202201'
+TaoBaoHolder: '1002801'
+TaoBaoLoginWithEmail: '2402801'
+TaoBaoLoginWithMobileNum: '2202801'
+VehicleHolder: '1004101'
+VehicleWithCo: '5214101'
+VehicleWithPlate: '4104201'
+WeChatFriend: '2302301'
+WeChatGroupCreator: '2305121'
+WeChatGroupManager: '2305123'
+WeChatGroupMember: '2305122'
+WeChatHolder: '1002301'
+WeChatLoginWithMobileNum: '2202301'
+WeChatWithCo: '5212301'
+WifeToHusband: '1001002'
+WorkAt: '1003102'
+WorkForCo: '1005211'
+Worker: '1003102'
+Ambiguous: undefine
