更新关系词典

--- a/sementic_server/data/yml/relation.yml
+++ b/sementic_server/data/yml/relation.yml
@@ -105,7 +105,9 @@ FatherSiblingToChild: []
 FixedPhoneHolder: []
 FixedPhoneWithCo: []
 GetMessageFrom: []
-HusbandToWife: []
+HusbandToWife:
+- 老婆
+- 妻子
 IDCardDLHolder: []
 IDCardTWHolder: []
 IMEIHolder: []
