--- a/sementic_server/data/yml/wrong_table.yml
+++ b/sementic_server/data/yml/wrong_table.yml
@@ -56745,6 +56745,31 @@ qq好友: []
 - naoyi
 - laooyi
 - nayi
+老婆:
+- 老泼
+- 老波
+- lao婆
+- nao婆
+- laoo婆
+- na婆
+- lao泼
+- nao泼
+- laoo泼
+- na泼
+- lao波
+- nao波
+- laoo波
+- na波
+- 老po
+- 老poo
+- laopo
+- naopo
+- laoopo
+- napo
+- laopoo
+- naopoo
+- laoopoo
+- napoo
 老子:
 - lao子
 - nao子
