谁的支付宝账号是18851951427 添加意图确定规则

--- a/sementic_server/data/ontology/object_attribute.yml
+++ b/sementic_server/data/ontology/object_attribute.yml
@@ -94,7 +94,7 @@ PhasAddr:
   belong: true
   domain: person
   range: addr
-PhasAlipay:
+PHasAlipay:
   belong: true
   domain: person
   range: alipay
