--- a/sementic_server/data/yml/relation.yml
+++ b/sementic_server/data/yml/relation.yml
@@ -158,7 +158,8 @@ MobileNumWithIMSI: []
 MotherSiblingToChild: []
 PAppeared: []
 PHasAddr: []
-PHasAlipay: []
+PHasAlipay:
+- 支付宝账号
 PHasBankCard: []
 PHasDouYin: []
 PHasEmail: []
