--- a/sementic_server/data/yml/wrong_table.yml
+++ b/sementic_server/data/yml/wrong_table.yml
@@ -54510,6 +54510,168 @@ qq好友: []
 - ciyou
 挚友:
 - 挚you
+支付宝账号:
+- zhi付宝账号
+- zi付宝账号
+- 支fu宝账号
+- zhifu宝账号
+- zifu宝账号
+- 支付bao账号
+- 支付baoo账号
+- zhi付bao账号
+- zi付bao账号
+- zhi付baoo账号
+- zi付baoo账号
+- 支fubao账号
+- 支fubaoo账号
+- zhifubao账号
+- zifubao账号
+- zhifubaoo账号
+- zifubaoo账号
+- 支付宝zhang号
+- 支付宝zang号
+- zhi付宝zhang号
+- zi付宝zhang号
+- zhi付宝zang号
+- zi付宝zang号
+- 支fu宝zhang号
+- 支fu宝zang号
+- zhifu宝zhang号
+- zifu宝zhang号
+- zhifu宝zang号
+- zifu宝zang号
+- 支付baozhang号
+- 支付baoozhang号
+- 支付baozang号
+- 支付baoozang号
+- zhi付baozhang号
+- zi付baozhang号
+- zhi付baoozhang号
+- zi付baoozhang号
+- zhi付baozang号
+- zi付baozang号
+- zhi付baoozang号
+- zi付baoozang号
+- 支fubaozhang号
+- 支fubaoozhang号
+- 支fubaozang号
+- 支fubaoozang号
+- zhifubaozhang号
+- zifubaozhang号
+- zhifubaoozhang号
+- zifubaoozhang号
+- zhifubaozang号
+- zifubaozang号
+- zhifubaoozang号
+- zifubaoozang号
+- 支付宝账hao
+- 支付宝账haoo
+- zhi付宝账hao
+- zi付宝账hao
+- zhi付宝账haoo
+- zi付宝账haoo
+- 支fu宝账hao
+- 支fu宝账haoo
+- zhifu宝账hao
+- zifu宝账hao
+- zhifu宝账haoo
+- zifu宝账haoo
+- 支付bao账hao
+- 支付baoo账hao
+- 支付bao账haoo
+- 支付baoo账haoo
+- zhi付bao账hao
+- zi付bao账hao
+- zhi付baoo账hao
+- zi付baoo账hao
+- zhi付bao账haoo
+- zi付bao账haoo
+- zhi付baoo账haoo
+- zi付baoo账haoo
+- 支fubao账hao
+- 支fubaoo账hao
+- 支fubao账haoo
+- 支fubaoo账haoo
+- zhifubao账hao
+- zifubao账hao
+- zhifubaoo账hao
+- zifubaoo账hao
+- zhifubao账haoo
+- zifubao账haoo
+- zhifubaoo账haoo
+- zifubaoo账haoo
+- 支付宝zhanghao
+- 支付宝zanghao
+- 支付宝zhanghaoo
+- 支付宝zanghaoo
+- zhi付宝zhanghao
+- zi付宝zhanghao
+- zhi付宝zanghao
+- zi付宝zanghao
+- zhi付宝zhanghaoo
+- zi付宝zhanghaoo
+- zhi付宝zanghaoo
+- zi付宝zanghaoo
+- 支fu宝zhanghao
+- 支fu宝zanghao
+- 支fu宝zhanghaoo
+- 支fu宝zanghaoo
+- zhifu宝zhanghao
+- zifu宝zhanghao
+- zhifu宝zanghao
+- zifu宝zanghao
+- zhifu宝zhanghaoo
+- zifu宝zhanghaoo
+- zhifu宝zanghaoo
+- zifu宝zanghaoo
+- 支付baozhanghao
+- 支付baoozhanghao
+- 支付baozanghao
+- 支付baoozanghao
+- 支付baozhanghaoo
+- 支付baoozhanghaoo
+- 支付baozanghaoo
+- 支付baoozanghaoo
+- zhi付baozhanghao
+- zi付baozhanghao
+- zhi付baoozhanghao
+- zi付baoozhanghao
+- zhi付baozanghao
+- zi付baozanghao
+- zhi付baoozanghao
+- zi付baoozanghao
+- zhi付baozhanghaoo
+- zi付baozhanghaoo
+- zhi付baoozhanghaoo
+- zi付baoozhanghaoo
+- zhi付baozanghaoo
+- zi付baozanghaoo
+- zhi付baoozanghaoo
+- zi付baoozanghaoo
+- 支fubaozhanghao
+- 支fubaoozhanghao
+- 支fubaozanghao
+- 支fubaoozanghao
+- 支fubaozhanghaoo
+- 支fubaoozhanghaoo
+- 支fubaozanghaoo
+- 支fubaoozanghaoo
+- zhifubaozhanghao
+- zifubaozhanghao
+- zhifubaoozhanghao
+- zifubaoozhanghao
+- zhifubaozanghao
+- zifubaozanghao
+- zhifubaoozanghao
+- zifubaoozanghao
+- zhifubaozhanghaoo
+- zifubaozhanghaoo
+- zhifubaoozhanghaoo
+- zifubaoozhanghaoo
+- zhifubaozanghaoo
+- zifubaozanghaoo
+- zhifubaoozanghaoo
+- zifubaoozanghaoo
 收养:
 - shou养
 - sou养
