--- a/sementic_server/data/ontology/v_property_mentions.yml
+++ b/sementic_server/data/ontology/v_property_mentions.yml
@@ -20,8 +20,8 @@
 - QQ群标签
 0:
 - UUID
-56:
-- 京东账号
+#56:
+#- 京东账号
 153:
 - 企业状态
 163:
@@ -131,8 +131,8 @@ Ambiguous:
 - 淘宝账号
 5:
 - 生日
-155:
-- 电话
+#155:
+#- 电话
 167:
 - 登记机关
 124:
