--- a/sementic_server/data/yml/wrong_table.yml
+++ b/sementic_server/data/yml/wrong_table.yml
@@ -54484,6 +54484,48 @@ qq好友: []
 - 投shu
 - tousu
 - toushu
+抖音:
+- dou音
+- 抖yin
+- 抖ying
+- douyin
+- douying
+抖音账户:
+- dou音账户
+- 抖yin账户
+- 抖ying账户
+- douyin账户
+- douying账户
+- 抖音zhang户
+- 抖音zang户
+- dou音zhang户
+- dou音zang户
+- 抖yinzhang户
+- 抖yingzhang户
+- 抖yinzang户
+- 抖yingzang户
+- douyinzhang户
+- douyingzhang户
+- douyinzang户
+- douyingzang户
+- 抖音账hu
+- dou音账hu
+- 抖yin账hu
+- 抖ying账hu
+- douyin账hu
+- douying账hu
+- 抖音zhanghu
+- 抖音zanghu
+- dou音zhanghu
+- dou音zanghu
+- 抖yinzhanghu
+- 抖yingzhanghu
+- 抖yinzanghu
+- 抖yingzanghu
+- douyinzhanghu
+- douyingzhanghu
+- douyinzanghu
+- douyingzanghu
 报到:
 - bao到
 - baoo到
@@ -55762,6 +55804,34 @@ qq好友: []
 - segfu
 - shenfu
 - sefu
+电话:
+- dian话
+- 电hua
+- dianhua
+电话号码:
+- dian话号码
+- 电hua号码
+- dianhua号码
+- 电话hao码
+- 电话haoo码
+- dian话hao码
+- dian话haoo码
+- 电huahao码
+- 电huahaoo码
+- dianhuahao码
+- dianhuahaoo码
+- 电话号ma
+- dian话号ma
+- 电hua号ma
+- dianhua号ma
+- 电话haoma
+- 电话haooma
+- dian话haoma
+- dian话haooma
+- 电huahaoma
+- 电huahaooma
+- dianhuahaoma
+- dianhuahaooma
 电话联系:
 - dian话联系
 - 电hua联系
