淘宝账户为xiaowoniu且微博号是3456432的人是哪个

--- a/sementic_server/data/ontology/object_attribute.yml
+++ b/sementic_server/data/ontology/object_attribute.yml
@@ -170,7 +170,7 @@ PHasSSC:
   belong: true
   domain: person
   range: ssc
-PhasTaoBao:
+PHasTaoBao:
   belong: true
   domain: person
   range: taobao
