--- a/sementic_server/data/yml/wrong_table.yml
+++ b/sementic_server/data/yml/wrong_table.yml
@@ -835,6 +835,25 @@ qq好友: []
 - wu咦
 - 五yi
 - wuyi
+京东:
+- jing东
+- jingg东
+- jin东
+- 京dong
+- 京dongg
+- 京don
+- jingdong
+- jinggdong
+- jindong
+- jindong
+- jingdongg
+- jindongg
+- jinggdongg
+- jindong
+- jingdon
+- jindon
+- jinggdon
+- jindong
 亲人:
 - qin人
 - qing人
@@ -54240,6 +54259,10 @@ qq好友: []
 - 录ru
 - luru
 - nuru
+微信:
+- wei信
+- 微xin
+- weixin
 微信好友:
 - wei信好友
 - 微xin好友
@@ -54264,6 +54287,12 @@ qq好友: []
 - 微xinhaooyou
 - weixinhaoyou
 - weixinhaooyou
+微博:
+- wei博
+- 微bo
+- 微boo
+- weibo
+- weiboo
 总经理:
 - zong经理
 - zon经理
@@ -54425,6 +54454,12 @@ qq好友: []
 - shuozhaidi
 - suoozhaidi
 - shuzhaidi
+手机:
+- shou机
+- sou机
+- 手ji
+- shouji
+- souji
 手足:
 - shou足
 - sou足
@@ -55550,6 +55585,60 @@ qq好友: []
 - zucejigou
 - zhuchejigou
 - zuchejigou
+淘宝账户:
+- tao宝账户
+- taoo宝账户
+- 淘bao账户
+- 淘baoo账户
+- taobao账户
+- taoobao账户
+- taobaoo账户
+- taoobaoo账户
+- 淘宝zhang户
+- 淘宝zang户
+- tao宝zhang户
+- taoo宝zhang户
+- tao宝zang户
+- taoo宝zang户
+- 淘baozhang户
+- 淘baoozhang户
+- 淘baozang户
+- 淘baoozang户
+- taobaozhang户
+- taoobaozhang户
+- taobaoozhang户
+- taoobaoozhang户
+- taobaozang户
+- taoobaozang户
+- taobaoozang户
+- taoobaoozang户
+- 淘宝账hu
+- tao宝账hu
+- taoo宝账hu
+- 淘bao账hu
+- 淘baoo账hu
+- taobao账hu
+- taoobao账hu
+- taobaoo账hu
+- taoobaoo账hu
+- 淘宝zhanghu
+- 淘宝zanghu
+- tao宝zhanghu
+- taoo宝zhanghu
+- tao宝zanghu
+- taoo宝zanghu
+- 淘baozhanghu
+- 淘baoozhanghu
+- 淘baozanghu
+- 淘baoozanghu
+- taobaozhanghu
+- taoobaozhanghu
+- taobaoozhanghu
+- taoobaoozhanghu
+- taobaozanghu
+- taoobaozanghu
+- taobaoozanghu
+- taoobaoozanghu
 滞留:
 - zhi留
 - zi留
