qq为196787955微信号是xiaowoniu123邮箱地址是7895444633@qq.com的人是谁

--- a/sementic_server/data/ontology/default_relation.yml
+++ b/sementic_server/data/ontology/default_relation.yml
@@ -14,11 +14,11 @@ PersonToPerson:
   domain: person
   range: person
   value: 人与人
-PhasQQ:
+PHasQQ:
   domain: person
   range: qq
   value: 拥有QQ
-PhasWeChat:
+PHasWeChat:
   domain: person
   range: wechat
   value: 拥有微信
