--- a/sementic_server/data/yml/wrong_table.yml
+++ b/sementic_server/data/yml/wrong_table.yml
@@ -1,6 +1,9 @@
 CEO: []
+QQ为: []
+QQ号为: []
 QQ好友: []
 call: []
+qq为: []
 qq好友: []
 一起去:
 - yi起去
@@ -58346,6 +58349,30 @@ qq好友: []
 - yaoojinqun
 - yaojingqun
 - yaoojingqun
+邮箱地址:
+- you箱地址
+- 邮xiang地址
+- youxiang地址
+- 邮箱di址
+- you箱di址
+- 邮xiangdi址
+- youxiangdi址
+- 邮箱地zhi
+- 邮箱地zi
+- you箱地zhi
+- you箱地zi
+- 邮xiang地zhi
+- 邮xiang地zi
+- youxiang地zhi
+- youxiang地zi
+- 邮箱dizhi
+- 邮箱dizi
+- you箱dizhi
+- you箱dizi
+- 邮xiangdizhi
+- 邮xiangdizi
+- youxiangdizhi
+- youxiangdizi
 郎舅:
 - lang舅
 - nang舅
