qq为196787955微信号是xiaowoniu123邮箱地址是7895444633@qq.com的人是谁

--- a/sementic_server/data/yml/wrong_table.yml
+++ b/sementic_server/data/yml/wrong_table.yml
@@ -58100,6 +58100,15 @@ qq好友: []
 - caosijiaooseme
 - chaoosijiaooseme
 - casijiaooseme
+车主:
+- che主
+- ce主
+- 车zhu
+- 车zu
+- chezhu
+- cezhu
+- chezu
+- cezu
 辅导员:
 - fu导员
 - 辅dao员
