法人是汪洋并且注册地址是南京市江宁街道的公司的注册时间 优化值属性查询

--- a/sementic_server/data/ontology/object_attribute.yml
+++ b/sementic_server/data/ontology/object_attribute.yml
@@ -192,7 +192,7 @@ QQGroupMember:
 RegisterPlace:
   belong: false
   domain: company
-  range: company
+  range: addr
 Remark:
   belong: false
   domain: mobilenum
@@ -268,3 +268,7 @@ HusbandToWife:
   belong: false
   domain: person
   range: person
+LegalPersonOfCo:
+  belong: false
+  domain: person
+  range: company
