图无法添加默认边时，先添加一个人物节点

--- a/sementic_server/data/ontology/default_relation.yml
+++ b/sementic_server/data/ontology/default_relation.yml
@@ -30,3 +30,19 @@ AddrWithP:
   domain: addr
   range: person
   value: 人与地址
+TaoBaoHolder:
+  domain: taobao
+  range: person
+  value: 人与淘宝
+AlipayHolder:
+  domain: alipay
+  range: person
+  value: 人与支付宝
+DouYinHolder:
+  domain: douyin
+  range: person
+  value: 人与抖音
+EmailHolder:
+  domain: email
+  range: person
+  value: 人与邮箱
