--- a/sementic_server/data/ontology/v_property_mentions.yml
+++ b/sementic_server/data/ontology/v_property_mentions.yml
@@ -127,8 +127,8 @@ Ambiguous:
 - 注册时间
 164:
 - 注册资本金
-66:
-- 淘宝账号
+#66:
+#- 淘宝账号
 5:
 - 生日
 #155:
@@ -163,12 +163,12 @@ Ambiguous:
 - 行业
 119:
 - 装机时间
-123:
-- 身份证件号码
-81:
-- 车架号
-91:
-- 车牌号
+#123:
+#- 身份证件号码
+#81:
+#- 车架号
+#91:
+#- 车牌号
 92:
 - 车牌颜色
 83:
