李冰冰坐过牢，她的爸爸李刚也坐过牢

--- a/sementic_server/data/ontology/object_attribute.yml
+++ b/sementic_server/data/ontology/object_attribute.yml
@@ -276,3 +276,7 @@ WifeToHusband:
   belong: false
   domain: person
   range: person
+ChildToParent:
+  belong: false
+  domain: person
+  range: person
